--- a/client/src/components/sign-in/sign-in.css
+++ b/client/src/components/sign-in/sign-in.css
@@ -1,6 +1,24 @@
 /* Autor: Arne Schaper */
 
-h1 {
+h1,
+h3 {
   text-align: center;
   font-weight: bold;
+}
+
+form {
+  margin: auto;
+  text-align: center;
+}
+
+div + div {
+  margin-top: 10px;
+}
+
+input {
+  text-align: center;
+}
+
+button:last-of-type {
+  margin-bottom: 20px;
 }
