--- a/client/src/components/landingpage/landing-page.css
+++ b/client/src/components/landingpage/landing-page.css
@@ -1,5 +1,16 @@
 /* Autor: Arne Schaper */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-h1 {
-  text-decoration: underline;
+section {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background: url(background_lp1.jpg);
 }
