--- a/client/src/components/meet/meetChatMessage.css
+++ b/client/src/components/meet/meetChatMessage.css
@@ -4,11 +4,13 @@
     border-radius: 0.3rem 1rem 2rem 3rem;
     margin: 0.5rem;
     text-align: left;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding: 1rem;
+    padding-top: 0.5rem;
     justify-content: flex-start;
 
     display: flex;
+    flex-direction: column;
+
 }
 
 .message > * {
@@ -22,5 +24,7 @@
     border-radius: 1rem 0.3rem 2rem 3rem;
     float:right;
 }
-
+.message[ownMessage="true"] > .messageHeader{
+    visibility: hidden;
+}
 
