--- a/client/src/components/meets/meets.css
+++ b/client/src/components/meets/meets.css
@@ -1,5 +1,17 @@
 .meets{
     text-align: center;
+   
+}
+.meets-header{
+    background-color: pink;
+    border-radius: 0.5rem; 
+    align-items: center;
+    
+    min-width: 40rem;
+    height: 3rem;
+    display: inline-flex;
+    justify-content: center;
+    
 }
 
 .meets-body{
