--- a/client/src/components/meet/meetingUser.css
+++ b/client/src/components/meet/meetingUser.css
@@ -1,15 +1,29 @@
+.h3{
+    font-weight: bold;
+    font-size: 1rem;
+}
+
 .meetingUser{
     display: flex;
     background-color: lightgrey;
     border-radius: 1rem;
+    width: 30rem;
+    transition: width 0.3s ease-in-out;
 
+    align-items: center;
+    cursor: pointer;
+    
     margin: 0.5rem;
     vertical-align: middle;
+
 }
 .meetingUser:hover{
     -webkit-box-shadow: 6px 8px 12px -1px rgba(0,0,0,0.36); 
     box-shadow: 6px 8px 12px -1px rgba(0,0,0,0.36);
+    width: 40rem;
+
 }
+
 .meetingUser > img{
     border-radius: 1rem;
     max-width: 2rem;
