update activity to include author, fix properties, update db scripts

--- a/client/src/components/find-activity/find-activity.css
+++ b/client/src/components/find-activity/find-activity.css
@@ -1,11 +1,12 @@
 /* Arne Schaper */
-
-.activity-container {
-  margin: 0 auto;
+.activity-outer {
+  text-align: center;
 }
 
-.activity {
-  text-align: center;
+.activity-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .activity-header {
