--- a/client/src/components/find-activity/activity-rating/activity-rating.css
+++ b/client/src/components/find-activity/activity-rating/activity-rating.css
@@ -1,9 +1,8 @@
 .slider {
   width: 100%;
   height: 15px;
-  border-radius: 5px;
-  background: #d3d3d3;
-  outline: none;
+  border-radius: 7px;
+  background: #dfd2d2;
   opacity: 0.7;
   transition: opacity 0.2s;
 }
@@ -14,7 +13,7 @@
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #04aa6d;
+  background: #ffc0cb;
   cursor: pointer;
 }
 
@@ -22,6 +21,6 @@
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #04aa6d;
+  background: #ffc0cb;
   cursor: pointer;
 }
