--- a/client/src/components/find-activity/create-activity/new-activity.css
+++ b/client/src/components/find-activity/create-activity/new-activity.css
@@ -1,4 +1,4 @@
-/* Popup */
+/* Popup Initial Source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_popup_form*/
 
 body {
   font-family: Arial, Helvetica, sans-serif;
