--- a/client/src/components/meet/meet.css
+++ b/client/src/components/meet/meet.css
@@ -22,6 +22,14 @@ body{
     padding: 0rem 2rem;
     
 }
+.meetName{
+    border-style: none;
+    background: transparent;
+
+    font-size: 22px;
+    font-weight: bold; 
+    margin: 0.5rem;
+}
 
 .meet-Delete{
     font-weight: 200;
@@ -54,6 +62,23 @@ body{
     flex-direction: column;
 }
 
-.meetMate {
+.routeBtn{
+    background-color: #315895;
 
+    cursor: pointer;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    justify-content: center;
+
+    transition: wid;
+
+    min-width: 2rem;
+    min-height: 1rem;
+    margin: 0.5rem;
+    border-radius: 1rem;
+}
+
+.routeBtn:hover{
+    -webkit-box-shadow: 6px 8px 12px -1px rgba(0,0,0,0.36); 
+    box-shadow: 6px 8px 12px -1px rgba(0,0,0,0.36);
 }
