--- a/client/src/components/find-activity/find-activity.css
+++ b/client/src/components/find-activity/find-activity.css
@@ -4,6 +4,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+.rating {
+  flex-wrap: wrap;
 }
 
 .activity:nth-child(even) {
@@ -140,6 +145,7 @@ body {
   padding: 12px 16px;
   background-color: #f1f1f1;
   cursor: pointer;
+  border-radius: 0.5rem;
 }
 
 .btn:hover {
