--- a/client/src/components/widgets/footer/footer.css
+++ b/client/src/components/widgets/footer/footer.css
@@ -5,11 +5,11 @@
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   width: 100%;
-  text-align: left;
   font: normal 16px sans-serif;
   padding: 45px 50px;
   position: absolute;
   text-align: center;
+  flex-shrink: 0;
 }
 
 .footer-distributed .footer-left p {
@@ -17,7 +17,6 @@
   font-size: 14px;
   margin: 0;
 }
-/* Footer links */
 
 .footer-distributed p.footer-links {
   font-size: 18px;
