--- a/client/src/components/find-activity/activity-rating/activity-rating.css
+++ b/client/src/components/find-activity/activity-rating/activity-rating.css
@@ -7,20 +7,35 @@
   transition: opacity 0.2s;
 }
 
+#img:hover {
+  border: 3px solid rgb(4, 236, 93);
+}
+
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #ffc0cb;
+  background: #314fd3;
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
-  background: #ffc0cb;
+  background: #314fd3;
   cursor: pointer;
+}
+
+#overallRating {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 15px;
+  border-radius: 7px;
+  background: #534e4e;
+  opacity: 0.7;
+  transition: opacity 0.2s;
 }
