--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,4 +1,4 @@
-/* Autor: Valentin Lieberknecht */
+/* Autor: Jonathan Hüls */
 
 :root {
   --app-primary-color: #315895;
@@ -6,14 +6,47 @@
   --app-bright-color: #83a5c2;
   --app-dark-color: #04204a;
 
+  --app-color-first: #315895;
+  --app-color-second: #83A5C2;
+  --app-color-third: #BF7F9B;
+  --app-color-fourth: #04204A;
+
   --app-color-light-first: #315895;
   --app-color-light-second: #83A5C2;
   --app-color-light-third: #BF7F9B;
   --app-color-light-fourth: #04204A;
 
+  
+  --app-color-dark-first: #60c37f;
+  --app-color-dark-second: #acf600;
+  --app-color-dark-third: #6790f0;
+  --app-color-dark-fourth: #9f9dfa;
+
+  --app-footer-height: 153px;
 }
+  
+  /*for darkmode for OS-preferences*/
+@media (prefers-color-scheme: dark) {
+    :root{
+      --app-color-first: var(--app-color-dark-first);
+      --app-color-second: var(--app-color-dark-second);
+      --app-color-third: var(--app-color-dark-third);
+      --app-color-fourth: var(--app-color-dark-fourth);
+    }
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
+  padding-bottom: var(--app-footer-height, 153px);
 }
+
+/* fordarkmode through Button*/
+body.dark{
+  --app-color-first: var(--app-color-dark-first);
+  --app-color-second: var(--app-color-dark-second);
+  --app-color-third: var(--app-color-dark-third);
+  --app-color-fourth: var(--app-color-dark-fourth);
+}
+
