--- a/client/src/components/meet/meetingUser.css
+++ b/client/src/components/meet/meetingUser.css
@@ -1,37 +1,39 @@
 .h3{
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 .meetingUser{
     display: flex;
     background-color: lightgrey;
-    border-radius: 1rem;
-    width: 30rem;
+    border-radius: 16px;
+    width: 100%;
     transition: width 0.3s ease-in-out;
 
     align-items: center;
     cursor: pointer;
-    
-    margin: 0.5rem;
+    margin: 8px 0;
     vertical-align: middle;
 
 }
+
+/*
 .meetingUser:hover{
     -webkit-box-shadow: 6px 8px 12px -1px rgba(0,0,0,0.36); 
     box-shadow: 6px 8px 12px -1px rgba(0,0,0,0.36);
     width: 40rem;
 
 }
+*/
 
 .meetingUser > img{
-    border-radius: 1rem;
-    max-width: 2rem;
-    max-height: 2rem;
+    border-radius: 16px;
+    max-width: 32px;
+    max-height: 32px;
 
 }
 .meetingUser > *{
     
-    margin: 0.5rem;
+    margin: 8px;
     
 }
