--- a/client/src/components/meets/meets.css
+++ b/client/src/components/meets/meets.css
@@ -6,12 +6,12 @@
   display: none;
 }
 .meets-header {
-  background-color: pink;
-  border-radius: 0.5rem;
+  background-color: var(--app-color-third, #bf7f9b);
+  border-radius: 8px;
   align-items: center;
 
-  min-width: 40rem;
-  height: 3rem;
+  min-width: 100%;
+  height: 48px;
   display: inline-flex;
   justify-content: center;
 }
