--- a/client/src/components/meets/userIcon.css
+++ b/client/src/components/meets/userIcon.css
@@ -1,10 +1,10 @@
 img{
-    border-radius: 1rem;
+    border-radius: 16px;
     min-width: auto;
     min-height: auto;
 
-    max-width: 2rem;
-    max-height: 2rem;
+    max-width: 32px;
+    max-height: 32px;
 }
 
 img:not(:defined) {
