fix meet-userIcon to round display

--- a/client/src/components/meet/meetingUser.css
+++ b/client/src/components/meet/meetingUser.css
@@ -30,8 +30,11 @@
     border-radius: 16px;
     max-width: 32px;
     max-height: 32px;
+    min-width: 32px;
 
+    flex-shrink: 0;
 }
+
 .meetingUser > *{
     
     margin: 8px;
