--- a/client/src/components/meets/userIcon.css
+++ b/client/src/components/meets/userIcon.css
@@ -1,10 +1,11 @@
 img{
     border-radius: 16px;
-    min-width: auto;
-    min-height: auto;
-
+    min-width:32px;
     max-width: 32px;
     max-height: 32px;
+
+    flex-shrink: 0;
+
 }
 
 img:not(:defined) {
@@ -16,7 +17,6 @@ img:not(:defined) {
 .tooltip {
     position: relative;
     display: inline-block;
-    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 
 
