--- a/client/src/components/settings/settings.css
+++ b/client/src/components/settings/settings.css
@@ -1,41 +1,77 @@
-/* Autor: Valentin Lieberknecht */
-
-.sidenav {
-  width: 150px;
-  position: fixed;
-  z-index: 2;
-  top: 60px;
-  left: 10px;
-  background: #eee;
-  overflow-x: hidden;
-  padding: 8px 0;
+html,
+body {
+  height: 100%;
+  color: #1a1b1c;
 }
-
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 20px;
-  display: block;
-}
-
-.sidenav a:hover {
-  color: #064579;
+a {
   cursor: pointer;
+  user-select: none;
+  text-decoration: none;
+  display: inline-block;
+  color: inherit;
+  transition: border 0.2s;
+  border-bottom: 5px solid rgba(142, 68, 173, 0.2);
+  padding: 3px 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+a:hover {
+  border-bottom-color: #83a5c2;
+}
+.layout {
+  display: grid;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  grid-template-rows: 50px 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.page {
+  grid-column-start: 1;
+  grid-row-start: 2;
+  grid-column-end: span 3;
+  padding: 0px 20px;
+  display: flex;
+  align-items: center;
+}
+.page-contents > * {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.2s, transform 0.2s;
+}
+.div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  cursor: pointer;
+  user-select: none;
+  padding-left: 0;
 }
 
-.main {
+form {
   max-width: 600px;
   margin: 30px auto;
   background: white;
   text-align: left;
   border-radius: 10px;
 }
-
-@media (max-width: 600px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-  .sidenav a {
-    font-size: 15px;
-  }
+label {
+  color: rgb(104, 103, 103);
+  display: inline-block;
+  margin: 25px 0 15px;
+  font-size: 0.7em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+input,
+select {
+  display: block;
+  padding: 10px 6px;
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid rgb(168, 168, 168);
+  color: #555;
 }
