--- a/client/src/components/find-activity/find-activity.css
+++ b/client/src/components/find-activity/find-activity.css
@@ -16,6 +16,7 @@
 }
 
 .activity-container {
+  /* Change flex direction to column when too small*/
   margin-top: 1rem;
   display: flex;
   align-items: center;
@@ -39,76 +40,59 @@
 
 /* Popup Initial Source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_popup_form*/
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-* {
-  box-sizing: border-box;
-}
-
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
   background-color: #555;
+  width: 40rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.5rem;
   color: white;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
 }
 
 /* The popup form - hidden by default */
 .form-popup {
   display: none;
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-
-/* Add styles to the form container */
-.form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
+  position: relative;
 }
 
 /* Full-width input fields */
 .form-container input[type='text'],
 .form-container input[type='password'] {
-  width: 100%;
+  width: 40rem;
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
   background: #f1f1f1;
+  border-radius: 0.5rem;
 }
 
-/* When the inputs get focus, do something */
+/* When the inputs get focus..*/
 .form-container input[type='text']:focus,
 .form-container input[type='password']:focus {
-  background-color: #ddd;
+  background-color: var(--app-bright-color);
   outline: none;
 }
 
-/* Set a style for the submit/login button */
+/* Set style for create-activity button */
 .form-container .btn {
-  background-color: #04aa6d;
+  background-color: var(--app-primary-color);
   color: white;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 40rem;
   margin-bottom: 10px;
   opacity: 0.8;
 }
 
 /* Add a red background color to the cancel button */
 .form-container .cancel {
-  background-color: red;
+  background-color: var(--app-error-color);
 }
 
 /* Add some hover effects to buttons */
