--- a/client/src/components/find-activity/find-activity.css
+++ b/client/src/components/find-activity/find-activity.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .rating {
@@ -12,28 +13,28 @@
 }
 
 .activity:nth-child(even) {
-  margin-left: 1rem;
+  margin-left: 16px;
 }
 
 .activity-container {
   /* Change flex direction to column when too small*/
-  margin-top: 1rem;
+  margin-top: 16px;
   display: flex;
   align-items: center;
   flex-direction: row;
 }
 
 .activity-container:last-child {
-  margin-bottom: 1rem;
+  margin-bottom: 16px;
 }
 
 .activity-header {
   background-color: #ffc0cb;
-  border-radius: 0.5rem;
+  border-radius: 8px;
   align-items: center;
 
-  min-width: 40rem;
-  height: 3rem;
+  width: 50%;
+  height: 48px;
   display: inline-flex;
   justify-content: center;
 }
@@ -43,15 +44,19 @@
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
   background-color: #555;
-  width: 40rem;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  border-radius: 0.5rem;
+  width: 50%;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  border-radius: 8px;
   color: white;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
   opacity: 0.8;
+}
+
+.form-container {
+  width: 100%;
 }
 
 /* The popup form - hidden by default */
@@ -63,12 +68,12 @@
 /* Full-width input fields */
 .form-container input[type='text'],
 .form-container input[type='password'] {
-  width: 40rem;
+  width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
   background: #f1f1f1;
-  border-radius: 0.5rem;
+  border-radius: 8px;
 }
 
 /* When the inputs get focus..*/
@@ -85,7 +90,7 @@
   padding: 16px 20px;
   border: none;
   cursor: pointer;
-  width: 40rem;
+  width: 100%;
   margin-bottom: 10px;
   opacity: 0.8;
 }
@@ -129,7 +134,7 @@
   padding: 12px 16px;
   background-color: #f1f1f1;
   cursor: pointer;
-  border-radius: 0.5rem;
+  border-radius: 8px;
 }
 
 .btn:hover {
