--- a/client/src/components/landingpage/landing-page.css
+++ b/client/src/components/landingpage/landing-page.css
@@ -10,8 +10,8 @@
     min-width: 25%;
     min-height: 33%;
 
-    align-items: center;
-    display: block;
+    flex-direction: column;
+    display: flex;
 
     margin-left: auto;
     margin-right: auto;
@@ -43,6 +43,7 @@
   max-width: 150px;
   max-height: 150px;
 
+  align-self: center;
   object-fit: cover;
   object-position: right;
 
