--- a/client/src/components/meets/meets.css
+++ b/client/src/components/meets/meets.css
@@ -6,6 +6,7 @@
   display: none;
 }
 .meets-header {
+  margin-top: 16px;
   background-color: var(--app-color-third, #bf7f9b);
   border-radius: 8px;
   align-items: center;
