--- a/client/src/components/widgets/header/header.css
+++ b/client/src/components/widgets/header/header.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
+  z-index: 10;
   position: sticky;
   top: 0;
   margin: 0px;
@@ -12,7 +12,7 @@
   padding-right: 10px;
   padding-top: 1px;
   padding-bottom: 0px;
-  background-color: var(--app-primary-color);
+  background-color: var(--app-color-first);
   color: white;
 }
 
