--- a/client/src/components/meet/meet.css
+++ b/client/src/components/meet/meet.css
@@ -119,3 +119,19 @@
     width: 80%;
     border-radius: 16px;
 }
+
+.activity-container {
+    /* Change flex direction to column when too small*/
+    margin-top: 16px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+.activity-container:last-child {
+    margin-bottom: 16px;
+  }
+
+.activity{
+
+}
