--- a/client/src/components/sign-in/sign-in.css
+++ b/client/src/components/sign-in/sign-in.css
@@ -4,21 +4,81 @@ h1,
 h3 {
   text-align: center;
   font-weight: bold;
+  text-decoration: none;
+}
+
+div {
+  text-align: center;
+}
+
+button {
+  margin-top: 5%;
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+button:hover {
+  background-color: #ddd;
 }
 
 form {
   margin: auto;
   text-align: center;
+  max-width: 600px;
+  margin: 30px auto;
+  text-align: left;
+  border-radius: 10px;
 }
 
 div + div {
   margin-top: 10px;
 }
 
-input {
-  text-align: center;
+label {
+  color: rgb(104, 103, 103);
+  display: inline-block;
+  margin: 25px 0 15px;
+  font-size: 0.7em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
 }
 
-button:last-of-type {
-  margin-bottom: 20px;
+input {
+  text-align: center;
+  display: block;
+  padding: 10px 6px;
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid rgb(168, 168, 168);
+  color: #555;
+}
+
+@media (max-width: 600px) {
+  form {
+    width: 60%;
+    margin: auto;
+    text-align: center;
+    max-width: 600px;
+    margin: 30px auto;
+    text-align: left;
+    border-radius: 10px;
+  }
+
+  .submitbtn {
+    text-align: center;
+    display: block;
+    padding: 10px 6px;
+    width: 60%;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 1px solid rgb(168, 168, 168);
+    color: #555;
+  }
 }
