--- a/client/src/components/find-activity/activity/activity-info.css
+++ b/client/src/components/find-activity/activity/activity-info.css
@@ -7,6 +7,7 @@
 }
 .card-body {
   margin: 16px 16px;
+  height: auto;
 }
 .card-image {
   max-width: 100%;
@@ -19,12 +20,19 @@
 .card-content {
   font-size: 16px;
   color: #777;
+  white-space: wrap;
+  margin-right: 10px;
+  flex-wrap: wrap;
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  display: block;
 }
 
 /* Tooltip container */
 .tooltip {
   position: relative;
-  display: inline-block;
+  display: block;
 }
 
 /* Tooltip text */
