--- a/client/src/components/find-activity/find-activity.css
+++ b/client/src/components/find-activity/find-activity.css
@@ -38,7 +38,7 @@
 
 .activity-header {
   margin-top: 8px;
-  background-color: #ffc0cb;
+  background-color: var(--app-color-third);
   border-radius: 8px;
   align-items: center;
 
@@ -51,8 +51,6 @@
 /* Filter CSS */
 .filterDiv {
   float: left;
-  background-color: #2196f3;
-  color: #ffffff;
   width: 100px;
   line-height: 100px;
   text-align: center;
@@ -74,19 +72,23 @@
   border: none;
   outline: none;
   padding: 12px 16px;
-  background-color: #f1f1f1;
+  background-color: #d0dbdf;
   cursor: pointer;
   border-radius: 8px;
 }
 
 .btn:hover {
-  background-color: #ddd;
+  background-color: var(--app-color-second);
 }
 
 @media (max-width: 680px) {
+  .create-activity {
+    width: 100%;
+  }
+
   .activity-header {
-    background-color: #ffc0cb;
-    border-radius: 8px;
+    background-color: var(--app-color-third);
+    border-radius: 0;
     align-items: center;
 
     width: 100%;
@@ -97,19 +99,6 @@
 
   .create-activity {
     width: 100%;
-  }
-
-  .open-button {
-    background-color: #555;
-    width: 100%;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    border-radius: 8px;
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    opacity: 0.8;
   }
 
   .activity-container {
