--- a/client/src/components/sign-up/sign-up.css
+++ b/client/src/components/sign-up/sign-up.css
@@ -52,6 +52,7 @@ button {
   background-color: #f1f1f1;
   cursor: pointer;
   border-radius: 8px;
+  margin-bottom: 80px;
 }
 .error {
   color: #ff0062;
