--- a/client/src/components/find-activity/find-activity.css
+++ b/client/src/components/find-activity/find-activity.css
@@ -82,11 +82,33 @@
   background-color: var(--app-color-second);
 }
 
-@media (max-width: 680px) {
-  .create-activity {
+@media (max-width: 1200px) {
+  :host {
     width: 100%;
   }
 
+  .activity-header {
+    background-color: var(--app-color-third);
+    border-radius: 8px;
+    align-items: center;
+
+    width: 50%;
+    height: 48px;
+    display: inline-flex;
+    justify-content: center;
+  }
+
+  .activity-container {
+    /* Change flex direction to column when too small*/
+    margin-top: 16px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
+}
+
+@media (max-width: 680px) {
   .activity-header {
     background-color: var(--app-color-third);
     border-radius: 0;
@@ -96,6 +118,10 @@
     height: 48px;
     display: inline-flex;
     justify-content: center;
+  }
+
+  .activity:nth-child(2n) {
+    margin-left: 0;
   }
 
   .create-activity {
