--- a/client/src/components/find-activity/create-activity/create-activity.css
+++ b/client/src/components/find-activity/create-activity/create-activity.css
@@ -103,4 +103,20 @@ select:focus {
     cursor: pointer;
     opacity: 0.8;
   }
+
+  .form-container .btn {
+    background-color: var(--app-color-first);
+    border-radius: 0;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 10px;
+    opacity: 0.8;
+  }
+
+  .form-container .cancel {
+    background-color: var(--app-color-third);
+  }
 }
