minor css fixes

--- a/client/src/components/find-activity/find-activity.css
+++ b/client/src/components/find-activity/find-activity.css
@@ -98,6 +98,10 @@
     justify-content: center;
   }
 
+  .btn {
+    margin-top: 5px;
+  }
+
   .activity-container {
     /* Change flex direction to column when too small*/
     margin-top: 16px;
