--- a/client/src/components/meet/meet.css
+++ b/client/src/components/meet/meet.css
@@ -39,12 +39,14 @@ h3 {
 
   width: 100%;
   padding: 8px 16px;
+
+  margin-top: 8px;
 }
 
 .meetName {
   border-style: none;
   background: transparent;
-
+  margin-top: 8px;
   font-size: 22px;
   font-weight: bold;
   margin: 8px;
@@ -90,25 +92,19 @@ h3 {
   flex-direction: column;
 }
 
+/* Style buttons */
 .routeBtn {
-  background-color: var(--app-color-first, #bf7f9b);
-
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #d0dbdf;
   cursor: pointer;
-  text-decoration: none;
-  color: rgb(255, 255, 255);
-  justify-content: center;
-
-  transition: wid;
-
-  min-width: 15%;
-  min-height: 5%;
-  margin: 8px;
-  border-radius: 16px;
+  border-radius: 8px;
+  margin-bottom: 16px;
 }
 
 .routeBtn:hover {
-  -webkit-box-shadow: 6px 8px 12px -1px rgba(0, 0, 0, 0.36);
-  box-shadow: 6px 8px 12px -1px rgba(0, 0, 0, 0.36);
+  background-color: var(--app-color-second);
 }
 
 .chat {
